@@ -1,5 +1,5 @@
 from django.core.management.base import BaseCommand, CommandError
-from oi_seattracker.models import Computer, Tag
+from oi_seattracker.models import Computer, Tag, Participant
 import json
 
 class Command(BaseCommand):
@@ -12,7 +12,11 @@ class Command(BaseCommand):
         obj = dict(_meta=dict(hostvars=dict()), all=dict(hosts=[]))
         for host in Computer.objects.all():
             obj['all']['hosts'].append(host.ansible_name)
-            obj['_meta']['hostvars'][host.ansible_name] = dict(ansible_host=host.ip_address, mac_address=str(host.mac_address) if host.mac_address else None)
+            try:
+                participant_id = host.participant.id
+            except Participant.DoesNotExist:
+                participant_id = None
+            obj['_meta']['hostvars'][host.ansible_name] = dict(ansible_host=host.ip_address, mac_address=str(host.mac_address) if host.mac_address else None, participant_id=participant_id)
         for tag in Tag.objects.all():
             obj[tag.name] = dict(hosts=[host.ansible_name for host in tag.computer_set.all()])
         print(json.dumps(obj))
