@@ -10,6 +10,7 @@ oi-bus (0.2.0) UNRELEASED; urgency=medium
   * Add basic unit tests
   * Add registration by QR codes
   * Add summarized Ansible logs
+  * Add participant IDs to Ansible inventory
 
  -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Mon, 17 Feb 2020 20:16:24 +0100
 
